# Gremina-Term2-Labs

./: CMakeLists.txt  Database.cpp  Database.h  Planet.cpp  Planet.h  README.md  RailwayTicket.cpp  RailwayTicket.h  class.cpp  class.hpp  dbase.txt  main.cpp
.bin/: lab_3
.build/: lab_4  test
.build/lab_3/: lab_3
fraction/: fraction.cpp  fraction.h  fraction.hpp
src/: app.cpp  app.hpp
stack/: stack.hpp
subtraction/: CMakeLists.txt  subtraction.cpp  subtraction.h
